Module IV/04-volumes/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todo-volumes
  labels:
    app: todo-app
    example: stateful-volumes
